<resources>
    <string name="app_name">GO! Asset</string>
    <string name="action_settings">Settings</string>
    <string name="location_sent_successful">Location sent successfully</string>
    <string name="message_auth_asset">Logging you in…</string>
    <string name="message_auth_failed">Can\'t log you in, try again? </string>
    <string name="message_reg_failed">Can\'t register, try again?</string>
    <string name="message_connection_error">Can\'t connect, check your connection</string>
    <string name="message_get_profile">Getting your profile…</string>
    <string name="message_start_activity">Login successful, taking you home…</string>
    <string name="message_reg_successful">Registration successful! Now log in</string>
    <string name="message_profile_data_unavailable">Can\'t find profile info, try again?</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="sign_up_text_view_text">Don\'t have an account? Sign up</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_age">Age</string>
    <string name="hint_gender">Gender</string>
    <string name="sign_up_button_text">Create Account</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="toggle_on">On</string>
    <string name="toggle_off">Off</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signUp">Don\'t have an account?</string>
    <string name="signUpClick">Sign up</string>
    <string name="assetName">Logged in as </string>
    <string name="signup">Don\'t have an account? Sign up</string>
    <string name="msg_play_service_not_suported">This device is not supported</string>
    <string name="label_activity_job">Job details</string>
    <string name="tab_name_map">Map</string>
    <string name="tab_name_task">Task</string>
    <string name="label_activity_login">Login</string>
    <string name="label_activity_main">Home</string>
    <string name="label_activity_signup">Sign up</string>
    <string name="notification">Tracking location…</string>
    <string name="location_sent_failure">Failed to send location</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drwaer</string>

    <!-- Settings Strings -->
    <string name="tracking_frequency">Tracking Frequency</string>
    <string name="list_of_seconds">Intervals</string>
    <string name="server_endpoint">Servers</string>
    <string name="note_to_delivery_man">Note to Deliveryman</string>
    <string name="sample">Sometimes, after opening the webcat, it is found that, the access token is saved on the browser\'s local storage, but its validity has ended. In that case, the authorized api calls returns unauthorized 401 error.
How that should be handled in the WebCat? </string>
    <string name="note_empty">No special notes!</string>

    <!--Job Details -->
    <string name="pickup">Pickup address</string>
    <string name="delivery">Delivery address</string>
    <string name="btn_locate_on_map">Open in map</string>
    <string name="title_package_list">Package list</string>
    <string name="title_package_description">Description</string>
    <string name="currency_bdt">"BDT "</string>
    <string name="text_job_pickup">"Pickup   :  "</string>
    <string name="text_job_delivery">"Delivery :  "</string>
    <string name="title_task_update">Update tasks</string>
    <string name="dialog_button_update">UPDATE</string>
    <string name="msg_task_update_successful">Task updated successfully</string>
    <string name="msg_task_update_error">Task update failed</string>

</resources>
