<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_title_pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickup"
            android:textStyle="bold"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tv_pickup_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_pickup"
            android:paddingTop="8dp"
            android:text="@string/sample" />

        <Button
            android:id="@+id/btn_pickup_open_map"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_pickup_address"
            android:text="@string/btn_locate_on_map"
            android:textColor="@color/material_grey_500" />


    </RelativeLayout>

</android.support.v7.widget.CardView>