<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SignUpActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.rengwuxian.materialedittext.MaterialEditText

            android:id="@+id/etUsername"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_person_white_24dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_person_white_24dp"
            android:hint="@string/username"
            android:inputType="textNoSuggestions"
            android:textSize="18sp"
            app:met_baseColor="@color/black"
            app:met_clearButton="true"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextColor="@color/black"
            app:met_primaryColor="@color/black"
            app:met_textColor="@color/black"
            app:met_textColorHint="@color/black"
            app:met_underlineColor="@color/black" />

        <com.rengwuxian.materialedittext.MaterialEditText

            android:id="@+id/etPassword"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etUsername"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_lock_white_24dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_lock_white_24dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="18sp"
            app:met_baseColor="@color/black"
            app:met_clearButton="true"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextColor="@color/black"
            app:met_primaryColor="@color/black"
            app:met_textColor="@color/black"
            app:met_textColorHint="@color/black"
            app:met_underlineColor="@color/black" />

        <com.rengwuxian.materialedittext.MaterialEditText

            android:id="@+id/etConfirmPassword"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_lock_white_24dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_lock_white_24dp"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:textSize="18sp"
            app:met_baseColor="@color/black"
            app:met_clearButton="true"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextColor="@color/black"
            app:met_primaryColor="@color/black"
            app:met_textColor="@color/black"
            app:met_textColorHint="@color/black"
            app:met_underlineColor="@color/black" />

        <com.rengwuxian.materialedittext.MaterialEditText

            android:id="@+id/etEmail"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etConfirmPassword"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:hint="@string/hint_email"
            android:inputType="textNoSuggestions"
            android:textSize="18sp"
            app:met_baseColor="@color/black"
            app:met_clearButton="true"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextColor="@color/black"
            app:met_primaryColor="@color/black"
            app:met_textColor="@color/black"
            app:met_textColorHint="@color/black"
            app:met_underlineColor="@color/black" />

        <com.rengwuxian.materialedittext.MaterialEditText

            android:id="@+id/etPhone"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmail"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_call_black_24dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_call_black_24dp"
            android:hint="@string/hint_phone"
            android:inputType="number"
            android:textSize="18sp"
            app:met_baseColor="@color/black"
            app:met_clearButton="true"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextColor="@color/black"
            app:met_primaryColor="@color/black"
            app:met_textColor="@color/black"
            app:met_textColorHint="@color/black"
            app:met_underlineColor="@color/black" />

        <Button
            android:id="@+id/bt_signup"
            style="@style/SignUpButtonLoginWidthDarkPrimaryColor"
            android:layout_below="@id/etPhone"
            android:layout_marginTop="40dp"
            android:onClick="onSignUpButtonClick"
            android:text="SIGN UP" />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>